// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Snapshot) Grid track table - empty should render correctly 1`] = `
<DocumentFragment>
  <div
    class="track_table_wrapper"
  >
    <div
      class="grid_track_table"
      role="table"
    >
      <div
        class="track_table_head"
      >
        <div
          class="track_table_header_row"
          role="row"
          style="grid-template-columns: 7.5em 4em 3em 3em minmax(8em, 1fr) 6em 6em 6em 3em auto;"
        >
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
          >
            <div
              class="selection_header"
            >
              <div
                class="ui fitted checkbox nuclear checkbox"
                style="cursor: pointer;"
              >
                <input
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  title="Toggle All Rows Selected"
                  type="checkbox"
                  value=""
                />
                <label />
              </div>
            </div>
          </div>
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="text_header centered"
              data-testid="position-header"
            >
              Position
              <i
                aria-hidden="true"
                class="sort content ascending icon text_header_icon"
              />
            </div>
          </div>
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="text_header"
            >
              Thumbnail
            </div>
          </div>
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
          >
             
          </div>
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="text_header"
            >
              Title
            </div>
          </div>
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="text_header"
            >
              Artist
            </div>
          </div>
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="text_header"
            >
              Album
            </div>
          </div>
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="text_header"
            >
              Length
            </div>
          </div>
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
          >
             
          </div>
        </div>
      </div>
      <div
        class="track_table_body"
        data-rbd-droppable-context-id="0"
        data-rbd-droppable-id="track_table"
        data-testid="track-table-body"
        role="rowgroup"
      >
        <div
          class="track_table_virtualized_list"
          style="position: relative; height: 600px; width: 600px; overflow: auto; will-change: transform; direction: ltr;"
        >
          <div
            style="height: 0px; width: 100%;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`(Snapshot) Grid track table - example data with all rows should render correctly 1`] = `
<DocumentFragment>
  <div
    class="track_table_wrapper"
  >
    <div
      class="grid_track_table"
      role="table"
    >
      <div
        class="track_table_head"
      >
        <div
          class="track_table_header_row"
          role="row"
          style="grid-template-columns: 7.5em 4em 3em 3em minmax(8em, 1fr) 6em 6em 6em 3em auto;"
        >
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
          >
            <div
              class="selection_header"
            >
              <div
                class="ui fitted checkbox nuclear checkbox"
                style="cursor: pointer;"
              >
                <input
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  title="Toggle All Rows Selected"
                  type="checkbox"
                  value=""
                />
                <label />
              </div>
            </div>
          </div>
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="text_header centered"
              data-testid="position-header"
            >
              Position
              <i
                aria-hidden="true"
                class="sort content ascending icon text_header_icon"
              />
            </div>
          </div>
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="text_header"
            >
              Thumbnail
            </div>
          </div>
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
          >
             
          </div>
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="text_header"
            >
              Title
            </div>
          </div>
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="text_header"
            >
              Artist
            </div>
          </div>
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="text_header"
            >
              Album
            </div>
          </div>
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="text_header"
            >
              Length
            </div>
          </div>
          <div
            class="track_table_header_cell"
            colspan="1"
            role="columnheader"
          >
             
          </div>
        </div>
      </div>
      <div
        class="track_table_body"
        data-rbd-droppable-context-id="1"
        data-rbd-droppable-id="track_table"
        data-testid="track-table-body"
        role="rowgroup"
      >
        <div
          class="track_table_virtualized_list"
          style="position: relative; height: 600px; width: 600px; overflow: auto; will-change: transform; direction: ltr;"
        >
          <div
            style="height: 126px; width: 100%;"
          >
            <div
              class="grid_track_table_row"
              data-rbd-draggable-context-id="1"
              data-rbd-draggable-id="0"
              data-testid="track-table-row"
              role="row"
              style="position: absolute; left: 0px; top: 0px; height: 42px; width: 100%; grid-template-columns: 7.5em 4em 3em 3em minmax(8em, 1fr) 6em 6em 6em 3em;"
              tabindex="0"
            >
              <div
                class="selection_cell"
                role="cell"
              >
                <div
                  class="ui fitted checkbox nuclear checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="hidden"
                    readonly=""
                    tabindex="-1"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label />
                </div>
              </div>
              <div
                class="grid_track_table_cell position_cell"
                data-testid="position-cell"
                role="cell"
              >
                <button
                  class="ui pink tiny circular icon button nuclear button play_button"
                  data-testid="play-now"
                >
                  <i
                    aria-hidden="true"
                    class="play icon"
                  />
                </button>
                <span
                  class="position_cell_value"
                >
                  1
                </span>
              </div>
              <div
                class="grid_track_table_cell thumbnail_cell"
                role="cell"
              />
              <div
                class="grid_track_table_cell favorite_cell"
                data-testid="favorite-cell"
                role="cell"
              >
                <button
                  class="ui tiny basic circular icon button nuclear button borderless"
                  data-testid="favorite-button"
                >
                  <i
                    aria-hidden="true"
                    class="heart outline icon"
                  />
                </button>
              </div>
              <div
                class="grid_track_table_cell text_cell title_cell"
                data-testid="title-cell"
                role="cell"
              >
                <span
                  class="title_cell_content"
                >
                  <span
                    class="title_cell_value"
                  >
                    Test Title
                  </span>
                  <span
                    class="title_cell_buttons"
                  >
                    <button
                      class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                      data-testid="add-to-queue"
                    >
                      <i
                        aria-hidden="true"
                        class="plus icon"
                      />
                    </button>
                    <button
                      class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                      data-testid="track-popup-trigger"
                    >
                      <i
                        aria-hidden="true"
                        class="ellipsis horizontal icon"
                      />
                    </button>
                  </span>
                </span>
              </div>
              <div
                class="grid_track_table_cell text_cell"
                role="cell"
              >
                Test Artist
              </div>
              <div
                class="grid_track_table_cell text_cell"
                role="cell"
              >
                Test Album
              </div>
              <div
                class="grid_track_table_cell text_cell"
                role="cell"
              >
                1:00
              </div>
              <div
                class="delete_cell"
                data-testid="delete-cell"
                role="cell"
              >
                <button
                  class="ui tiny basic circular icon button nuclear button borderless"
                  data-testid="delete-button"
                >
                  <i
                    aria-hidden="true"
                    class="times icon"
                  />
                </button>
              </div>
            </div>
            <div
              class="grid_track_table_row"
              data-rbd-draggable-context-id="1"
              data-rbd-draggable-id="1"
              data-testid="track-table-row"
              role="row"
              style="position: absolute; left: 0px; top: 42px; height: 42px; width: 100%; grid-template-columns: 7.5em 4em 3em 3em minmax(8em, 1fr) 6em 6em 6em 3em;"
              tabindex="1"
            >
              <div
                class="selection_cell"
                role="cell"
              >
                <div
                  class="ui fitted checkbox nuclear checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="hidden"
                    readonly=""
                    tabindex="-1"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label />
                </div>
              </div>
              <div
                class="grid_track_table_cell position_cell"
                data-testid="position-cell"
                role="cell"
              >
                <button
                  class="ui pink tiny circular icon button nuclear button play_button"
                  data-testid="play-now"
                >
                  <i
                    aria-hidden="true"
                    class="play icon"
                  />
                </button>
                <span
                  class="position_cell_value"
                >
                  2
                </span>
              </div>
              <div
                class="grid_track_table_cell thumbnail_cell"
                role="cell"
              />
              <div
                class="grid_track_table_cell favorite_cell"
                data-testid="favorite-cell"
                role="cell"
              >
                <button
                  class="ui tiny basic circular icon button nuclear button borderless"
                  data-testid="favorite-button"
                >
                  <i
                    aria-hidden="true"
                    class="heart outline icon"
                  />
                </button>
              </div>
              <div
                class="grid_track_table_cell text_cell title_cell"
                data-testid="title-cell"
                role="cell"
              >
                <span
                  class="title_cell_content"
                >
                  <span
                    class="title_cell_value"
                  >
                    Test Title 2
                  </span>
                  <span
                    class="title_cell_buttons"
                  >
                    <button
                      class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                      data-testid="add-to-queue"
                    >
                      <i
                        aria-hidden="true"
                        class="plus icon"
                      />
                    </button>
                    <button
                      class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                      data-testid="track-popup-trigger"
                    >
                      <i
                        aria-hidden="true"
                        class="ellipsis horizontal icon"
                      />
                    </button>
                  </span>
                </span>
              </div>
              <div
                class="grid_track_table_cell text_cell"
                role="cell"
              >
                Test Artist 2
              </div>
              <div
                class="grid_track_table_cell text_cell"
                role="cell"
              >
                Test Album
              </div>
              <div
                class="grid_track_table_cell text_cell"
                role="cell"
              >
                1:00
              </div>
              <div
                class="delete_cell"
                data-testid="delete-cell"
                role="cell"
              >
                <button
                  class="ui tiny basic circular icon button nuclear button borderless"
                  data-testid="delete-button"
                >
                  <i
                    aria-hidden="true"
                    class="times icon"
                  />
                </button>
              </div>
            </div>
            <div
              class="grid_track_table_row"
              data-rbd-draggable-context-id="1"
              data-rbd-draggable-id="2"
              data-testid="track-table-row"
              role="row"
              style="position: absolute; left: 0px; top: 84px; height: 42px; width: 100%; grid-template-columns: 7.5em 4em 3em 3em minmax(8em, 1fr) 6em 6em 6em 3em;"
              tabindex="2"
            >
              <div
                class="selection_cell"
                role="cell"
              >
                <div
                  class="ui fitted checkbox nuclear checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="hidden"
                    readonly=""
                    tabindex="-1"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label />
                </div>
              </div>
              <div
                class="grid_track_table_cell position_cell"
                data-testid="position-cell"
                role="cell"
              >
                <button
                  class="ui pink tiny circular icon button nuclear button play_button"
                  data-testid="play-now"
                >
                  <i
                    aria-hidden="true"
                    class="play icon"
                  />
                </button>
                <span
                  class="position_cell_value"
                >
                  3
                </span>
              </div>
              <div
                class="grid_track_table_cell thumbnail_cell"
                role="cell"
              />
              <div
                class="grid_track_table_cell favorite_cell"
                data-testid="favorite-cell"
                role="cell"
              >
                <button
                  class="ui tiny basic circular icon button nuclear button borderless"
                  data-testid="favorite-button"
                >
                  <i
                    aria-hidden="true"
                    class="heart outline icon"
                  />
                </button>
              </div>
              <div
                class="grid_track_table_cell text_cell title_cell"
                data-testid="title-cell"
                role="cell"
              >
                <span
                  class="title_cell_content"
                >
                  <span
                    class="title_cell_value"
                  >
                    Test Title 3
                  </span>
                  <span
                    class="title_cell_buttons"
                  >
                    <button
                      class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                      data-testid="add-to-queue"
                    >
                      <i
                        aria-hidden="true"
                        class="plus icon"
                      />
                    </button>
                    <button
                      class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                      data-testid="track-popup-trigger"
                    >
                      <i
                        aria-hidden="true"
                        class="ellipsis horizontal icon"
                      />
                    </button>
                  </span>
                </span>
              </div>
              <div
                class="grid_track_table_cell text_cell"
                role="cell"
              >
                Test Artist 3
              </div>
              <div
                class="grid_track_table_cell text_cell"
                role="cell"
              >
                Test Album
              </div>
              <div
                class="grid_track_table_cell text_cell"
                role="cell"
              >
                1:00
              </div>
              <div
                class="delete_cell"
                data-testid="delete-cell"
                role="cell"
              >
                <button
                  class="ui tiny basic circular icon button nuclear button borderless"
                  data-testid="delete-button"
                >
                  <i
                    aria-hidden="true"
                    class="times icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`(Snapshot) Grid track table - example data with multiple discs should render correctly 1`] = `
<DocumentFragment>
  <div
    class="track_table_wrapper"
  >
    <div
      class="track_table_wrapper"
    >
      <div
        class="grid_track_table"
        role="table"
      >
        <h3>
          Disc 0
        </h3>
        <div
          class="track_table_head"
        >
          <div
            class="track_table_header_row"
            role="row"
            style="grid-template-columns: 7.5em 4em 3em 3em minmax(8em, 1fr) 6em 6em 6em 3em auto;"
          >
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
            >
              <div
                class="selection_header"
              >
                <div
                  class="ui fitted checkbox nuclear checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="hidden"
                    readonly=""
                    tabindex="0"
                    title="Toggle All Rows Selected"
                    type="checkbox"
                    value=""
                  />
                  <label />
                </div>
              </div>
            </div>
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="text_header centered"
                data-testid="position-header"
              >
                Position
                <i
                  aria-hidden="true"
                  class="sort content ascending icon text_header_icon"
                />
              </div>
            </div>
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="text_header"
              >
                Thumbnail
              </div>
            </div>
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
            >
               
            </div>
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="text_header"
              >
                Title
              </div>
            </div>
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="text_header"
              >
                Artist
              </div>
            </div>
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="text_header"
              >
                Album
              </div>
            </div>
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="text_header"
              >
                Length
              </div>
            </div>
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
            >
               
            </div>
          </div>
        </div>
        <div
          class="track_table_body"
          data-rbd-droppable-context-id="2"
          data-rbd-droppable-id="track_table"
          data-testid="track-table-body"
          role="rowgroup"
        >
          <div
            class="track_table_virtualized_list"
            style="position: relative; height: 600px; width: 600px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 42px; width: 100%;"
            >
              <div
                class="grid_track_table_row"
                data-rbd-draggable-context-id="2"
                data-rbd-draggable-id="0"
                data-testid="track-table-row"
                role="row"
                style="position: absolute; left: 0px; top: 0px; height: 42px; width: 100%; grid-template-columns: 7.5em 4em 3em 3em minmax(8em, 1fr) 6em 6em 6em 3em;"
                tabindex="0"
              >
                <div
                  class="selection_cell"
                  role="cell"
                >
                  <div
                    class="ui fitted checkbox nuclear checkbox"
                    style="cursor: pointer;"
                  >
                    <input
                      class="hidden"
                      readonly=""
                      tabindex="-1"
                      title="Toggle Row Selected"
                      type="checkbox"
                      value=""
                    />
                    <label />
                  </div>
                </div>
                <div
                  class="grid_track_table_cell position_cell"
                  data-testid="position-cell"
                  role="cell"
                >
                  <button
                    class="ui pink tiny circular icon button nuclear button play_button"
                    data-testid="play-now"
                  >
                    <i
                      aria-hidden="true"
                      class="play icon"
                    />
                  </button>
                  <span
                    class="position_cell_value"
                  >
                    1
                  </span>
                </div>
                <div
                  class="grid_track_table_cell thumbnail_cell"
                  role="cell"
                />
                <div
                  class="grid_track_table_cell favorite_cell"
                  data-testid="favorite-cell"
                  role="cell"
                >
                  <button
                    class="ui tiny basic circular icon button nuclear button borderless"
                    data-testid="favorite-button"
                  >
                    <i
                      aria-hidden="true"
                      class="heart outline icon"
                    />
                  </button>
                </div>
                <div
                  class="grid_track_table_cell text_cell title_cell"
                  data-testid="title-cell"
                  role="cell"
                >
                  <span
                    class="title_cell_content"
                  >
                    <span
                      class="title_cell_value"
                    >
                      Test Title
                    </span>
                    <span
                      class="title_cell_buttons"
                    >
                      <button
                        class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                        data-testid="add-to-queue"
                      >
                        <i
                          aria-hidden="true"
                          class="plus icon"
                        />
                      </button>
                      <button
                        class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                        data-testid="track-popup-trigger"
                      >
                        <i
                          aria-hidden="true"
                          class="ellipsis horizontal icon"
                        />
                      </button>
                    </span>
                  </span>
                </div>
                <div
                  class="grid_track_table_cell text_cell"
                  role="cell"
                >
                  Test Artist
                </div>
                <div
                  class="grid_track_table_cell text_cell"
                  role="cell"
                >
                  Test Album
                </div>
                <div
                  class="grid_track_table_cell text_cell"
                  role="cell"
                >
                  1:00
                </div>
                <div
                  class="delete_cell"
                  data-testid="delete-cell"
                  role="cell"
                >
                  <button
                    class="ui tiny basic circular icon button nuclear button borderless"
                    data-testid="delete-button"
                  >
                    <i
                      aria-hidden="true"
                      class="times icon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="track_table_wrapper"
    >
      <div
        class="grid_track_table"
        role="table"
      >
        <h3>
          Disc 1
        </h3>
        <div
          class="track_table_head"
        >
          <div
            class="track_table_header_row"
            role="row"
            style="grid-template-columns: 7.5em 4em 3em 3em minmax(8em, 1fr) 6em 6em 6em 3em auto;"
          >
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
            >
              <div
                class="selection_header"
              >
                <div
                  class="ui fitted checkbox nuclear checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="hidden"
                    readonly=""
                    tabindex="0"
                    title="Toggle All Rows Selected"
                    type="checkbox"
                    value=""
                  />
                  <label />
                </div>
              </div>
            </div>
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="text_header centered"
                data-testid="position-header"
              >
                Position
                <i
                  aria-hidden="true"
                  class="sort content ascending icon text_header_icon"
                />
              </div>
            </div>
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="text_header"
              >
                Thumbnail
              </div>
            </div>
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
            >
               
            </div>
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="text_header"
              >
                Title
              </div>
            </div>
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="text_header"
              >
                Artist
              </div>
            </div>
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="text_header"
              >
                Album
              </div>
            </div>
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="text_header"
              >
                Length
              </div>
            </div>
            <div
              class="track_table_header_cell"
              colspan="1"
              role="columnheader"
            >
               
            </div>
          </div>
        </div>
        <div
          class="track_table_body"
          data-rbd-droppable-context-id="3"
          data-rbd-droppable-id="track_table"
          data-testid="track-table-body"
          role="rowgroup"
        >
          <div
            class="track_table_virtualized_list"
            style="position: relative; height: 600px; width: 600px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 42px; width: 100%;"
            >
              <div
                class="grid_track_table_row"
                data-rbd-draggable-context-id="3"
                data-rbd-draggable-id="0"
                data-testid="track-table-row"
                role="row"
                style="position: absolute; left: 0px; top: 0px; height: 42px; width: 100%; grid-template-columns: 7.5em 4em 3em 3em minmax(8em, 1fr) 6em 6em 6em 3em;"
                tabindex="0"
              >
                <div
                  class="selection_cell"
                  role="cell"
                >
                  <div
                    class="ui fitted checkbox nuclear checkbox"
                    style="cursor: pointer;"
                  >
                    <input
                      class="hidden"
                      readonly=""
                      tabindex="-1"
                      title="Toggle Row Selected"
                      type="checkbox"
                      value=""
                    />
                    <label />
                  </div>
                </div>
                <div
                  class="grid_track_table_cell position_cell"
                  data-testid="position-cell"
                  role="cell"
                >
                  <button
                    class="ui pink tiny circular icon button nuclear button play_button"
                    data-testid="play-now"
                  >
                    <i
                      aria-hidden="true"
                      class="play icon"
                    />
                  </button>
                  <span
                    class="position_cell_value"
                  >
                    2
                  </span>
                </div>
                <div
                  class="grid_track_table_cell thumbnail_cell"
                  role="cell"
                />
                <div
                  class="grid_track_table_cell favorite_cell"
                  data-testid="favorite-cell"
                  role="cell"
                >
                  <button
                    class="ui tiny basic circular icon button nuclear button borderless"
                    data-testid="favorite-button"
                  >
                    <i
                      aria-hidden="true"
                      class="heart outline icon"
                    />
                  </button>
                </div>
                <div
                  class="grid_track_table_cell text_cell title_cell"
                  data-testid="title-cell"
                  role="cell"
                >
                  <span
                    class="title_cell_content"
                  >
                    <span
                      class="title_cell_value"
                    >
                      Test Title 2
                    </span>
                    <span
                      class="title_cell_buttons"
                    >
                      <button
                        class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                        data-testid="add-to-queue"
                      >
                        <i
                          aria-hidden="true"
                          class="plus icon"
                        />
                      </button>
                      <button
                        class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                        data-testid="track-popup-trigger"
                      >
                        <i
                          aria-hidden="true"
                          class="ellipsis horizontal icon"
                        />
                      </button>
                    </span>
                  </span>
                </div>
                <div
                  class="grid_track_table_cell text_cell"
                  role="cell"
                >
                  Test Artist 2
                </div>
                <div
                  class="grid_track_table_cell text_cell"
                  role="cell"
                >
                  Test Album
                </div>
                <div
                  class="grid_track_table_cell text_cell"
                  role="cell"
                >
                  1:00
                </div>
                <div
                  class="delete_cell"
                  data-testid="delete-cell"
                  role="cell"
                >
                  <button
                    class="ui tiny basic circular icon button nuclear button borderless"
                    data-testid="delete-button"
                  >
                    <i
                      aria-hidden="true"
                      class="times icon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
